--- a/cplusplus/CatLearnQtOpenGL/CMakeLists.txt
+++ b/cplusplus/CatLearnQtOpenGL/CMakeLists.txt
@@ -1,2 +1,38 @@
 cmake_minimum_required(VERSION 3.27)
 cmake_policy(VERSION 3.27)
+
+project(CatLearnQtOpenGL)
+
+set(CMAKE_CXX_STANDARD 17) # 这对 MSVC 没有任何作用，请使用下面的target_compile_options
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS ON)
+
+message(STATUS "------------------------------------------------------------" )
+message(STATUS "[${PROJECT_NAME}] Configuration summary."                     )
+message(STATUS "------------------------------------------------------------ ")
+message(STATUS " System configuration:"                                       )
+message(STATUS " .. Processor type .............. = ${CMAKE_SYSTEM_PROCESSOR}")
+message(STATUS " .. CMake executable ............ = ${CMAKE_COMMAND}"         )
+message(STATUS " .. CMake version ............... = ${CMAKE_VERSION}"         )
+message(STATUS " .. System name ................. = ${CMAKE_SYSTEM}"          )
+message(STATUS " .. C++ compiler ................ = ${CMAKE_CXX_COMPILER}"    )
+message(STATUS " .. C compiler .................. = ${CMAKE_C_COMPILER}"      )
+message(STATUS " .. size(void*) ................. = ${CMAKE_SIZEOF_VOID_P}"   )
+message(STATUS " .. cmake current source ................. = ${CMAKE_CURRENT_SOURCE_DIR}")
+message(STATUS " .. cmake system name ................. = ${CMAKE_SYSTEM_NAME}")
+message(STATUS "------------------------------------------------------------ ")
+
+set(CHAPTERS
+    1.OpenGLBasics
+)
+
+set(1.OpenGLBasics
+    1.triangle
+)
+
+foreach(CHAPTER ${CHAPTERS})
+    foreach(DEMO ${${CHAPTER}})
+		add_subdirectory(src/${CHAPTER}/${DEMO})
+    endforeach(DEMO)
+endforeach(CHAPTER)
+
