feat: update opengl

--- a/cplusplus/CatLearnOpenGL/CMakeLists.txt
+++ b/cplusplus/CatLearnOpenGL/CMakeLists.txt
@@ -66,6 +66,7 @@ set(CHAPTERS
     1.getting_started
     2.lighting
     3.model_loading
+    4.advanced_opengl
 )
 
 set(1.getting_started
@@ -131,6 +132,10 @@ set(2.lighting
 
 set(3.model_loading
     1.model_loading
+)
+
+set(4.advanced_opengl
+    1.1.depth_testing
 )
 
 configure_file(configuration/root_directory.h.in configuration/root_directory.h)
