feat: update opengl depth

--- a/cplusplus/CatLearnOpenGL/CMakeLists.txt
+++ b/cplusplus/CatLearnOpenGL/CMakeLists.txt
@@ -136,6 +136,7 @@ set(3.model_loading
 
 set(4.advanced_opengl
     1.1.depth_testing
+    1.2.depth_testing_view
 )
 
 configure_file(configuration/root_directory.h.in configuration/root_directory.h)
