feat: update opengl advanced

--- a/cplusplus/CatLearnOpenGL/CMakeLists.txt
+++ b/cplusplus/CatLearnOpenGL/CMakeLists.txt
@@ -138,6 +138,9 @@ set(4.advanced_opengl
     1.1.depth_testing
     1.2.depth_testing_view
     2.1.stencil_testing
+    3.1.blending_discard
+    3.2.blending_sort
+    4.1.face_culling_exercise1
 )
 
 configure_file(configuration/root_directory.h.in configuration/root_directory.h)
