--- a/cplusplus/CatLearnOpenGL/CMakeLists.txt
+++ b/cplusplus/CatLearnOpenGL/CMakeLists.txt
@@ -141,6 +141,9 @@ set(4.advanced_opengl
     3.1.blending_discard
     3.2.blending_sort
     4.1.face_culling_exercise1
+    5.1.framebuffers
+    5.2.framebuffers_exercise1
+    5.3.framebuffers_exercise2
 )
 
 configure_file(configuration/root_directory.h.in configuration/root_directory.h)
