feat: update opengl 帧缓冲

--- a/cplusplus/CatLearnOpenGL/CMakeLists.txt
+++ b/cplusplus/CatLearnOpenGL/CMakeLists.txt
@@ -144,6 +144,7 @@ set(4.advanced_opengl
     5.1.framebuffers
     5.2.framebuffers_exercise1
     5.3.framebuffers_exercise2
+    5.4.framebuffers_exercise3
 )
 
 configure_file(configuration/root_directory.h.in configuration/root_directory.h)
