feat: update opengl

--- a/cplusplus/CatLearnOpenGL/CMakeLists.txt
+++ b/cplusplus/CatLearnOpenGL/CMakeLists.txt
@@ -166,6 +166,8 @@ set(4.advanced_opengl
 set(5.advanced_lighting
     1.advanced_lighting
     2.gamma_correction
+    3.1.1.shadow_mapping_depth
+    3.1.2.shadow_mapping_base
 )
 
 configure_file(configuration/root_directory.h.in configuration/root_directory.h)
